Team page is working